--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
     <body>
         <div class="card d-flex mx-auto my-3 my-md-5 h-auto">
-            <img class="img1 d-none d-md-block" width="47%" src="../images/image-product-desktop.jpg" alt="">
-            <img class="img2 d-md-none" src="../images/image-product-mobile.jpg" alt="">
+            <img class="img1 d-none d-md-block" width="47%" src="./images/image-product-desktop.jpg" alt="">
+            <img class="img2 d-md-none" src="./images/image-product-mobile.jpg" alt="">
             <div class="card-body p-4">
 
                 <!--Perfume name-->
@@ -25,7 +25,7 @@
                     <h4 class="present-price fw-bold">$149.99</h4>
                     <p class="former-price ms-4 text-decoration-line-through mt-1">$169.99</p>
                 </div>
-                <button class="mt-2 px-md-5 py-2 fw-bold"><img class="me-1" src="../images/icon-cart.svg" alt=""> Add to Cart</button>  
+                <button class="mt-2 px-md-5 py-2 fw-bold"><img class="me-1" src="./images/icon-cart.svg" alt=""> Add to Cart</button>  
                 </p>
             </div>
         </div> 
