--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </head>
 
     <body>
-        <div class="card d-flex mx-auto h-auto">
+        <div class="card d-flex mx-auto my-3 my-md-5 h-auto">
             <img class="img1 d-none d-md-block" width="47%" src="./images/image-product-desktop.jpg" alt="">
             <img class="img2 d-md-none" src="./images/image-product-mobile.jpg" alt="">
             <div class="card-body p-4">
